fixed white space

--- a/css/About_layout.css
+++ b/css/About_layout.css
@@ -1,6 +1,9 @@
-body{
-	margin: 0;
-	padding: 0;
+html, body{
+	width: 100%;
+	height: auto;
+	margin: 0px;
+	padding: 0px;
+	overflow-x: hidden;
 	letter-spacing: 1px;
 	font-family: 'Oswald', sans-serif;
 	font-weight:200;
@@ -172,7 +175,7 @@ body{
 	width: 100%;
 	height: 400px;
 	background-color: D8D8D8;
-	display: block;
+	display: in-line;
 	text-align: center;
 	font-family: 'Roboto', sans-serif;
 	font-weight: 200;
@@ -184,11 +187,11 @@ body{
 }
 
 .footer_text{
-	width: 1200px;
+	width: 800px;
 	height: 300px;
-    margin: 0 auto;
+    margin: 0 150px;
     padding: 10px;
-    position: relative;
+    position: absolute;
 	
 	display: block;
 }
