--- a/css/Staff_Layout.css
+++ b/css/Staff_Layout.css
@@ -1,6 +1,9 @@
-body{
-	margin: 0;
-	padding: 0;
+html, body{
+	width: 100%;
+	height: auto;
+	margin: 0px;
+	padding: 0px;
+	overflow-x: hidden;
 	font-family: 'Oswald', sans-serif;
 	letter-spacing: 1px;
 	font-weight:200;
@@ -9,6 +12,7 @@ body{
 
 .header{
 	width: 100%;
+
 	height: 600px;
 	text-align: center;
 	margin: 0px;
